Added ECS config

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ font-family: Tahoma, Verdana, Arial, sans-serif; }
 </head>
 <body>
 <h1>Welcome to nginx!</h1>
-<h1>Prasath ECS Demo - Frontend NGINX-V3 - Custom Image</h1>
+<h1>Prasath ECS Demo - Frontend NGINX-V3-EFS - Custom Image</h1>
 <h1><a href='http://internal-cohort-demo-alb-internal-1269525810.us-east-1.elb.amazonaws.com/'> 
     <button class="GFG"> 
         Click Here 
